# voicetag

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_models.py  test_pipeline.py  test_transcriber.py
voicetag/: __init__.py  cli.py  exceptions.py  models.py  pipeline.py  transcriber.py
voicetag/providers/: deepgram_stt.py  fireworks_stt.py  groq_stt.py  openai_stt.py  whisper_local.py
